--- a/index.html
+++ b/index.html
@@ -1,14 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Kayra Ülgen – Certificates</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #121212;
+      color: #e0e0e0;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+    }
+    .gallery img {
+      max-width: 300px;
+      height: auto;
+      border-radius: 8px;
+      cursor: zoom-in;
+      transition: transform 0.3s ease;
+      user-select: none;
+      -webkit-user-drag: none;
+      pointer-events: auto;
+    }
+    .gallery img:hover {
+      transform: scale(1.02);
+    }
+    .lightbox {
+      position: fixed;
+      top: 0; left: 0; width: 100%; height: 100%;
+      background-color: rgba(0,0,0,0.8);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 10;
+    }
+    .lightbox img {
+      max-width: 90%;
+      max-height: 90%;
+      border-radius: 10px;
+      pointer-events: none;
+    }
+    .lightbox:active {
+      display: none;
+    }
+  </style>
 </head>
 <body>
   <h1>My Certificates</h1>
-  <ul>
-    <li>DevOps Solutions: CI/CD Training (2025)</li>
-    <li>iOS Mobile Application Development with Swift</li>
-  </ul>
+  <div class="gallery">
+    <img src="cert1.jpg" alt="Certificate 1" onclick="openLightbox(this.src)" oncontextmenu="return false">
+    <img src="cert2.jpg" alt="Certificate 2" onclick="openLightbox(this.src)" oncontextmenu="return false">
+    <!-- Yeni sertifikaları bu şekilde ekleyebilirsin -->
+  </div>
+
+  <div class="lightbox" id="lightbox" onclick="closeLightbox()">
+    <img id="lightbox-img" src="" alt="Expanded Certificate"/>
+  </div>
+
+  <script>
+    function openLightbox(src) {
+      document.getElementById("lightbox-img").src = src;
+      document.getElementById("lightbox").style.display = "flex";
+    }
+    function closeLightbox() {
+      document.getElementById("lightbox").style.display = "none";
+    }
+  </script>
 </body>
 </html>
