--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 <body>
   <h1>My Certificates</h1>
   <div class="gallery">
-    <img src="cert1.jpg" alt="Certificate 1" onclick="openLightbox(this.src)" oncontextmenu="return false">
-    <img src="cert2.jpg" alt="Certificate 2" onclick="openLightbox(this.src)" oncontextmenu="return false">
+    <img src="robot_dreams_cretificate.png" alt="Devops Solutions:CI/CD Training" onclick="openLightbox(this.src)" oncontextmenu="return false">
+    <img src="IOS Mobile Application Development with Swift Certificate.png" alt="IOS Mobile Application Development with Swift" onclick="openLightbox(this.src)" oncontextmenu="return false">
     <!-- Yeni sertifikaları bu şekilde ekleyebilirsin -->
   </div>
 
