--- a/index.html
+++ b/index.html
@@ -12,19 +12,28 @@
       color: #e0e0e0;
       padding: 20px;
     }
+
     h1 {
       text-align: center;
       margin-bottom: 40px;
     }
+
     .gallery {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 20px;
+      gap: 40px;
     }
-    .gallery img {
-      max-width: 300px;
-      height: auto;
+
+    .certificate {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      max-width: 320px;
+    }
+
+    .certificate img {
+      width: 100%;
       border-radius: 8px;
       cursor: zoom-in;
       transition: transform 0.3s ease;
@@ -32,9 +41,18 @@
       -webkit-user-drag: none;
       pointer-events: auto;
     }
-    .gallery img:hover {
+
+    .certificate img:hover {
       transform: scale(1.02);
     }
+
+    .caption {
+      text-align: center;
+      margin-top: 12px;
+      font-size: 1.1em;
+      color: #b0bec5;
+    }
+
     .lightbox {
       position: fixed;
       top: 0; left: 0; width: 100%; height: 100%;
@@ -44,33 +62,34 @@
       justify-content: center;
       z-index: 10;
     }
+
     .lightbox img {
       max-width: 90%;
       max-height: 90%;
       border-radius: 10px;
       pointer-events: none;
     }
+
     .lightbox:active {
       display: none;
     }
-    .caption {
-      text-align: center;
-      max-width: 300px;
-      margin-top: 10px;
-      font-size: 1.2em;
-      color: #b0bec5;
-    }
-
   </style>
 </head>
 <body>
   <h1>My Certificates</h1>
+
   <div class="gallery">
-    <img src="robot_dreams_cretificate.png" alt="Devops Solutions:CI/CD Training" onclick="openLightbox(this.src)" oncontextmenu="return false">
-    <p class="caption">Devops Solutions:CI/CD Training</p>
-    <img src="IOS Mobile Application Development with Swift Certificate.png" alt="IOS Mobile Application Development with Swift" onclick="openLightbox(this.src)" oncontextmenu="return false">
-    <p class="caption">IOS Mobile Application Development with Swift</p>
-    
+    <div class="certificate">
+      <img src="robot_dreams_cretificate.png" alt="Devops Solutions: CI/CD Training" onclick="openLightbox(this.src)" oncontextmenu="return false">
+      <p class="caption">DevOps Solutions: CI/CD Training</p>
+    </div>
+
+    <div class="certificate">
+      <img src="IOS Mobile Application Development with Swift Certificate.png" alt="iOS Mobile Application Development with Swift" onclick="openLightbox(this.src)" oncontextmenu="return false">
+      <p class="caption">iOS Mobile App Development with Swift</p>
+    </div>
+
+    <!-- Yeni sertifika eklemek istersen aşağıya bir tane daha bu yapıyla ekle -->
   </div>
 
   <div class="lightbox" id="lightbox" onclick="closeLightbox()">
@@ -82,6 +101,7 @@
       document.getElementById("lightbox-img").src = src;
       document.getElementById("lightbox").style.display = "flex";
     }
+
     function closeLightbox() {
       document.getElementById("lightbox").style.display = "none";
     }
