Added YDS Result certificate to index.html

--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
       <p class="caption">iOS Mobile App Development with Swift</p>
     </div>
 
-    
+    <div class="certificate">
+      <img src="yds_sonuc.png" alt="YDS Result" onclick="openLightbox(this.src)" oncontextmenu="return false">
+      <p class="caption">YDS Result</p>
+    </div>
   </div>
 
   <div class="lightbox" id="lightbox" onclick="closeLightbox()">
@@ -108,4 +111,3 @@
   </script>
 </body>
 </html>
-
